# diseases-predictor-in-sugarcane

./: Dockerfile  Makefile  README.md  dataset.dvc  diseases_predictor_in_sugarcane.ipynb  docker-compose.yml  main_dataset.dvc  sugarcane_disease_dataset.ipynb
api/: pyproject.toml
api/app/: endpoints.py  main.py
api/app/core/settingEnv/: base.py  dev.py  local.py  prod.py  test.py
api/config/: requirements.txt
api/tests/: conftest.py  test_main.py  test_predict.py
