[project]
name = "api-startkit-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "kauan",email = "kauanldsbarbosa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"


dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pydantic (>=2.11.2,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "keras (>=3.0.0,<4.0.0)",
    "pillow (>=10.0.0,<13.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "python-multipart (>=0.0.12,<1.0.0)",
    "optree (>=0.11.0,<1.0.0)",
    "tensorflow (>=2.15.0,<3.0.0)"
]







[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
coverage = "^7.8.0"
ruff = "^0.11.4"

[tool.poetry]
package-mode = false
packages = [
    { include = "app" }
]


[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.ruff]
line-length = 80
extend-exclude = ['alembic']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = "function"
cache_dir = ".pytest_cache"
asyncio_mode = "auto"
